# jupyspace

./: CHANGELOG.md  README.md  config.yaml  dev-environment.yml  pyproject.toml
.github/workflows/: main.yml
jupyspace/: __about__.py
jupyspace_api/: README.md  pyproject.toml
jupyspace_api/jupyspace_api/: __init__.py  app.py  cli.py  main.py  router.py
jupyspace_api/jupyspace_api/space/: __init__.py  models.py
jupyspace_api/jupyspace_api/spacex/: __init__.py
plugins/fps-localspace/: pyproject.toml
plugins/fps-localspace/fps_localspace/: models.py  routes.py  subprocess.py
plugins/localspace/: README.md  pyproject.toml
plugins/localspace/fps_localspace/: main.py  micromamba.py  routes.py  subprocess.py  utils.py
plugins/spacex/: README.md  pyproject.toml
plugins/spacex/fps_spacex/: main.py  routes.py
plugins/spacex/fps_spacex/templates/: create_environment.html  create_server.html  edit_environment.html  edit_server.html  environment.html  environments.html  index.html  search_environments.html  searched_environments.html  server.html  servers.html
tests/: __init__.py  conftest.py  test_localspace.py
