[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyspace"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "fps[uvicorn]>=0.0.19",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/davidbrochart/jupyspace#readme"
Issues = "https://github.com/davidbrochart/jupyspace/issues"
Source = "https://github.com/davidbrochart/jupyspace"

[project.optional-dependencies]
test = [
  "pytest",
  "requests",
]

[project.scripts]
jupyspace = "fps_uvicorn.cli:app"

[tool.hatch.version]
path = "jupyspace/__about__.py"
