[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fps-localspace"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "sqlmodel",
  "httpx",
  "jupyspace-api",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/davidbrochart/jupyspace/plugins/fps-localspace#readme"
Issues = "https://github.com/davidbrochart/jupyspace/plugins/fps-localspace/issues"
Source = "https://github.com/davidbrochart/jupyspace/plugins/fps-localspace"

[project.entry-points]
"asphalt.components"   = {space = "fps_localspace.main:LocalspaceComponent"}
"jupyspace.components" = {space = "fps_localspace.main:LocalspaceComponent"}

[tool.hatch.version]
path = "fps_localspace/__init__.py"
