[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fps-spacex"
description = "JupySpace's user interface"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = []
authors = [
  { name = "David Brochart", email = "david.brochart@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jupyspace-api",
  "jinja2",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/davidbrochart/jupyspace/plugins/fps-spacex"

[project.entry-points]
"asphalt.components"   = {spacex = "fps_spacex.main:SpacexComponent"}
"jupyspace.components" = {spacex = "fps_spacex.main:SpacexComponent"}

[tool.hatch.version]
path = "fps_spacex/__init__.py"
